welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:6: error: not found: value T
		if (T(c)>max)
                    ^maxValue:8: error: not found: value T
			max = T(c) 
                              ^